gcc/testsuite/treelang/compile/syntax-1.tree
// { dg-do compile }
external_reference void exit(int); // { dg-error "(parse|syntax) error" }

static int foo (int a);

foo
{
  return a;
}
